--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
   "name": "todo-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Server for a simple offline todo list.",
   "main": "index.js",
+  "keywords": [],
+  "author": "Thomas Dillard <htmlghozt>",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
     "lokijs": "^1.5.6"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "eslint": "^5.15.3",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4"
   },
   "scripts": {
+    "start:dev": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js"
+    "lint": "eslint ./",
+    "prettier": "prettier \"**/*.+(js|jsx|json|yml|yaml|css|less|md|graphql|mdx)\"",
+    "format": "npm run prettier -- --write"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  }
 }
