--- a/package.json
+++ b/package.json
@@ -15,21 +15,23 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
+    "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "supertest": "^4.0.2"
   },
   "scripts": {
     "start:dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint ./",
     "prettier": "prettier \"**/*.+(js|jsx|json|yml|yaml|css|less|md|graphql|mdx)\"",
     "format": "npm run prettier -- --write"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run test && lint-staged"
     }
   }
 }
