--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Thomas Dillard <htmlghozt>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "lokijs": "^1.5.6"
   },
